<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ompl</name>
  <version>2.0.0</version>
  <description>OMPL is a free sampling-based motion planning library.</description>
  <maintainer email="mark@moll.ai">Mark Moll</maintainer>
  <maintainer email="marq.razz@gmail.com">Marq Rasumessen</maintainer>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <license>BSD</license>

  <url type="website">https://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://github.com/ompl/ompl/issues</url>
  <url type="repository">https://github.com/ompl/ompl</url>

  <author>Kavraki Lab</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>eigen</depend>
  <depend>libboost-program-options-dev</depend>
  <depend>libboost-serialization-dev</depend>
  <!-- Required by Boost >= 1.90's modular CMake configs: boost_serialization's
       config recursively find_package()'s boost_system, which is shipped in
       its own apt package starting with 1.90 and is not pulled in transitively
       by libboost-serialization-dev. -->
  <depend>libboost-system-dev</depend>
  <depend>libflann-dev</depend>
  <depend>yaml-cpp</depend>
  <!-- For Python bindings via the bundled nanobind submodule:
       OMPLDependencies.cmake calls find_package(Python ... COMPONENTS
       Interpreter Development.Module) which needs Python headers. -->
  <depend>python3-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
