<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ompl</name>
  <version>2.0.0</version>
  <description>OMPL is a free sampling-based motion planning library.</description>
  <maintainer email="mark@moll.ai">Mark Moll</maintainer>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <license>BSD</license>

  <url type="website">https://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://github.com/ompl/ompl/issues</url>
  <url type="repository">https://github.com/ompl/ompl</url>

  <author>Kavraki Lab</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>yaml-cpp</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <build_depend>libboost-serialization-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libflann-dev</build_depend>
  <build_depend>python3-dev</build_depend>

  <exec_depend>libboost-program-options</exec_depend>
  <exec_depend>libboost-serialization</exec_depend>
  <exec_depend>libflann</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
